--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
                 width="370"
                 height="294"
               />
+              <div class="workshop-item-disc">
+                <p>Десктопные приложения</p>
+              </div>
             </li>
             <li class="workshop-item">
               <img
@@ -134,9 +137,15 @@
                 width="370"
                 height="294"
               />
+              <div class="workshop-item-disc">
+                <p>Мобильные приложения</p>
+              </div>
             </li>
             <li class="workshop-item">
               <img src="./image/pic3.jpg" alt="Создание веб-дизайна" width="370" height="294" />
+              <div class="workshop-item-disc">
+                <p>Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
