added modal window
Створив модальне вікно, підключив js

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
               <a class="menu-link" href="./index.html">Студия</a>
             </li>
             <li class="item">
-              <a class="menu-link active" href="./portfolio.html">Портфолио</a>
+              <a class="menu-link is-active" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="item">
               <a class="menu-link" href="">Контакты</a>
@@ -62,7 +62,7 @@
           <h1 class="title visually-hidden">Поиск портфолио</h1>
           <ul class="search-list">
             <li class="search-item">
-              <button class="search-bt active-bt" type="button">Все</button>
+              <button class="search-bt is-active-bt" type="button">Все</button>
             </li>
             <li class="search-item">
               <button class="search-bt" type="button">Веб-сайты</button>
