--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav class="menu">
           <ul class="menu-list">
             <li class="item">
-              <a class="menu-link active" href="./index.html">Студия</a>
+              <a class="menu-link is-active" href="./index.html">Студия</a>
             </li>
             <li class="item">
               <a class="menu-link" href="./portfolio.html">Портфолио</a>
@@ -63,7 +63,7 @@
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <button class="hero-button" type="button">Заказать услугу</button>
+          <button class="hero-button" type="button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
       <section class="section benefits">
@@ -416,5 +416,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-close-bt" data-modal-close>
+          <svg width="11px" height="11px">
+            <use href="./image/icons.svg#icon-Vector"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
