--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-close-bt" data-modal-close>
+        <button class="modal-close-bt" type="button" data-modal-close>
           <svg width="11px" height="11px">
             <use href="./image/icons.svg#icon-Vector"></use>
           </svg>
