--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close-bt" type="button" data-modal-close>
-          <svg width="11px" height="11px">
+          <svg class="close-bt-icon" width="11px" height="11px">
             <use href="./image/icons.svg#icon-Vector"></use>
           </svg>
         </button>
