--- a/portfolio.html
+++ b/portfolio.html
@@ -80,12 +80,21 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img
-                  src="./image/portfolio/portfolio1.jpg"
-                  alt="Страница сайта Технокряк з иконками людей на ноутбуке"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    src="./image/portfolio/portfolio1.jpg"
+                    alt="Страница сайта Технокряк з иконками людей на ноутбуке"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-box">
                   <h2 class="title-prt">Технокряк</h2>
                   <p class="descr-prt">Веб-сайт</p>
@@ -94,12 +103,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img
-                  src="./image/portfolio/portfolio2.jpg"
-                  alt="Два баскетболиста в прыжке с мячом"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    src="./image/portfolio/portfolio2.jpg"
+                    alt="Два баскетболиста в прыжке с мячом"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-box">
                   <h2 class="title-prt">Постер <span lang="en">Orlean vs Golden Star</span></h2>
                   <p class="descr-prt">Дизайн</p>
@@ -108,12 +126,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img
-                  src="./image/portfolio/portfolio3.jpg"
-                  alt="Логотип ресторана"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    src="./image/portfolio/portfolio3.jpg"
+                    alt="Логотип ресторана"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-box">
                   <h2 class="title-prt">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="descr-prt">Приложение</p>
@@ -122,12 +149,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img
-                  src="./image/portfolio/portfolio4.jpg"
-                  alt="Черные большые наушники"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    src="./image/portfolio/portfolio4.jpg"
+                    alt="Черные большые наушники"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-box">
                   <h2 class="title-prt">Проект <span lang="en">Prime</span></h2>
                   <p class="descr-prt">Маркетинг</p>
@@ -136,12 +172,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img
-                  src="./image/portfolio/portfolio5.jpg"
-                  alt="Две картонные коробки"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    src="./image/portfolio/portfolio5.jpg"
+                    alt="Две картонные коробки"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-box">
                   <h2 class="title-prt">Проект <span lang="en">Boxes</span></h2>
                   <p class="descr-prt">Приложение</p>
@@ -150,12 +195,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img
-                  src="./image/portfolio/portfolio6.jpg"
-                  alt="Чорный монитор з открытой страницей сайта"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    src="./image/portfolio/portfolio6.jpg"
+                    alt="Чорный монитор з открытой страницей сайта"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-box">
                   <h2 class="title-prt" lang="en">Inspiration has no Borders</h2>
                   <p class="descr-prt">Веб-сайт</p>
@@ -164,12 +218,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img
-                  src="./image/portfolio/portfolio7.jpg"
-                  alt="Открытая книга з рисунками"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    src="./image/portfolio/portfolio7.jpg"
+                    alt="Открытая книга з рисунками"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-box">
                   <h2 class="title-prt">Издание <span lang="en">Limited Edition</span></h2>
                   <p class="descr-prt">Дизайн</p>
@@ -178,12 +241,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img
-                  src="./image/portfolio/portfolio9.jpg"
-                  alt="Бумажная лейба на веревке з названием"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    src="./image/portfolio/portfolio9.jpg"
+                    alt="Бумажная лейба на веревке з названием"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-box">
                   <h2 class="title-prt">Проект <span lang="en">LAB</span></h2>
                   <p class="descr-prt">Маркетинг</p>
@@ -192,12 +264,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img
-                  src="./image/portfolio/portfolio8.jpg"
-                  alt="Ноутбук з открытим приложением"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    src="./image/portfolio/portfolio8.jpg"
+                    alt="Ноутбук з открытим приложением"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-box">
                   <h2 class="title-prt" lang="en">Growing Business</h2>
                   <p class="descr-prt">Приложение</p>
