--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <ul class="contacts-list">
           <li class="item">
             <a class="contacts-link" href="mailto:info@devstudio.com" lang="en">
-              <svg class="contacts-icon" width="16px" height="12px">
+              <svg class="contacts-icon" width="16" height="12">
                 <use href="./image/icons.svg#icon-envelope"></use>
               </svg>
               info&#64;devstudio.com</a
@@ -47,7 +47,7 @@
           </li>
           <li class="item">
             <a class="contacts-link" href="tel:+380961111111">
-              <svg class="contacts-icon" width="10px" height="16px">
+              <svg class="contacts-icon" width="10" height="16">
                 <use href="./image/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -419,7 +419,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close-bt" type="button" data-modal-close>
-          <svg class="close-bt-icon" width="11px" height="11px">
+          <svg class="close-bt-icon" width="11" height="11">
             <use href="./image/icons.svg#icon-Vector"></use>
           </svg>
         </button>
